Add notes `Loading a MacOS Native Library's Dependencies` and use absolute path in unit test script for library-path